src/task2report/grammar/task2reportParser.py
# Generated from grammar/task2report.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class task2reportParser ( Parser ):

    grammarFileName = "task2report.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'# '", "'#'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "WORDS", "EOL", 
                      "SPACES", "STAR", "YEAR", "MONTH", "DAY", "DATE" ]

    RULE_top = 0
    RULE_heading = 1
    RULE_string = 2
    RULE_indent = 3
    RULE_date = 4
    RULE_star = 5
    RULE_bullet = 6
    RULE_hex = 7
    RULE_tag = 8

    ruleNames =  [ "top", "heading", "string", "indent", "date", "star", 
                   "bullet", "hex", "tag" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    WORDS=3
    EOL=4
    SPACES=5
    STAR=6
    YEAR=7
    MONTH=8
    DAY=9
    DATE=10

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(task2reportParser.EOF, 0)

        def heading(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(task2reportParser.HeadingContext)
            else:
                return self.getTypedRuleContext(task2reportParser.HeadingContext,i)


        def bullet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(task2reportParser.BulletContext)
            else:
                return self.getTypedRuleContext(task2reportParser.BulletContext,i)


        def getRuleIndex(self):
            return task2reportParser.RULE_top

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTop" ):
                listener.enterTop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTop" ):
                listener.exitTop(self)




    def top(self):

        localctx = task2reportParser.TopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_top)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 18
                    self.heading()
                    pass
                elif token in [5, 6]:
                    self.state = 19
                    self.bullet()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 22 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 98) != 0)):
                    break

            self.state = 24
            self.match(task2reportParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeadingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(task2reportParser.StringContext,0)


        def EOL(self):
            return self.getToken(task2reportParser.EOL, 0)

        def getRuleIndex(self):
            return task2reportParser.RULE_heading

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeading" ):
                listener.enterHeading(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeading" ):
                listener.exitHeading(self)




    def heading(self):

        localctx = task2reportParser.HeadingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_heading)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.match(task2reportParser.T__0)
            self.state = 27
            self.string()
            self.state = 28
            self.match(task2reportParser.EOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORDS(self):
            return self.getToken(task2reportParser.WORDS, 0)

        def getRuleIndex(self):
            return task2reportParser.RULE_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)




    def string(self):

        localctx = task2reportParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(task2reportParser.WORDS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACES(self):
            return self.getToken(task2reportParser.SPACES, 0)

        def getRuleIndex(self):
            return task2reportParser.RULE_indent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndent" ):
                listener.enterIndent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndent" ):
                listener.exitIndent(self)




    def indent(self):

        localctx = task2reportParser.IndentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_indent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 32
                self.match(task2reportParser.SPACES)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATE(self):
            return self.getToken(task2reportParser.DATE, 0)

        def getRuleIndex(self):
            return task2reportParser.RULE_date

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDate" ):
                listener.enterDate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDate" ):
                listener.exitDate(self)




    def date(self):

        localctx = task2reportParser.DateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_date)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(task2reportParser.DATE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STAR(self):
            return self.getToken(task2reportParser.STAR, 0)

        def getRuleIndex(self):
            return task2reportParser.RULE_star

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStar" ):
                listener.enterStar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStar" ):
                listener.exitStar(self)




    def star(self):

        localctx = task2reportParser.StarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_star)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(task2reportParser.STAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BulletContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def indent(self):
            return self.getTypedRuleContext(task2reportParser.IndentContext,0)


        def star(self):
            return self.getTypedRuleContext(task2reportParser.StarContext,0)


        def string(self):
            return self.getTypedRuleContext(task2reportParser.StringContext,0)


        def EOL(self):
            return self.getToken(task2reportParser.EOL, 0)

        def date(self):
            return self.getTypedRuleContext(task2reportParser.DateContext,0)


        def tag(self):
            return self.getTypedRuleContext(task2reportParser.TagContext,0)


        def getRuleIndex(self):
            return task2reportParser.RULE_bullet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBullet" ):
                listener.enterBullet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBullet" ):
                listener.exitBullet(self)




    def bullet(self):

        localctx = task2reportParser.BulletContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_bullet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.indent()
            self.state = 40
            self.star()
            self.state = 41
            self.string()
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 42
                self.date()


            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 45
                self.tag()


            self.state = 48
            self.match(task2reportParser.EOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HexContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORDS(self):
            return self.getToken(task2reportParser.WORDS, 0)

        def getRuleIndex(self):
            return task2reportParser.RULE_hex

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHex" ):
                listener.enterHex(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHex" ):
                listener.exitHex(self)




    def hex_(self):

        localctx = task2reportParser.HexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_hex)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(task2reportParser.WORDS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def hex_(self):
            return self.getTypedRuleContext(task2reportParser.HexContext,0)


        def getRuleIndex(self):
            return task2reportParser.RULE_tag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTag" ):
                listener.enterTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTag" ):
                listener.exitTag(self)




    def tag(self):

        localctx = task2reportParser.TagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_tag)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(task2reportParser.T__1)
            self.state = 53
            self.hex_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





